--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
     <title>マインスイーパー</title>
@@ -30,7 +30,9 @@
             <button class="diff-btn" data-level="hard">上級</button>
         </div>
 
-        <div class="game-board" id="game-board"></div>
+        <div class="game-board-wrapper">
+            <div class="game-board" id="game-board"></div>
+        </div>
         
         <div class="controls">
             <button id="flag-mode-btn" class="control-btn">
