--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
     <title>マインスイーパー</title>
@@ -39,6 +39,10 @@
                 <span class="mode-icon">🚩</span>
                 <span class="mode-text">旗モード: OFF</span>
             </button>
+            <div class="zoom-controls">
+                <button id="zoom-out-btn" class="zoom-btn">－</button>
+                <button id="zoom-in-btn" class="zoom-btn">＋</button>
+            </div>
         </div>
 
         <div class="game-over-modal" id="game-over-modal">
