拡大縮小修正

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <header class="game-header">
             <div class="info-panel">
                 <div class="info-item">
-                    <span class="emoji">💣</span>
-                    <span id="mine-count">10</span>
+                    <span class="emoji">🚩</span>
+                    <span id="flag-count">0/40</span>
                 </div>
                 <button id="reset-btn" class="reset-btn">😊</button>
                 <div class="info-item">
