--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
 </head>
 <body>
     <div class="container">
+        <div class="difficulty-selector">
+            <select id="difficulty-select" class="difficulty-select">
+                <option value="easy">初級 (9×9, 地雷10)</option>
+                <option value="medium" selected>中級 (16×16, 地雷40)</option>
+                <option value="hard">上級 (16×30, 地雷99)</option>
+                <option value="hiddeneasy">裏初級 (9×9, 地雷20)</option>
+                <option value="hiddenmedium">裏中級 (16×16, 地雷64)</option>
+                <option value="hiddenhard">裏上級 (16×30, 地雷120)</option>
+                <option value="extreme">極悪 (64×64, 地雷999)</option>
+            </select>
+        </div>
+        
         <header class="game-header">
             <div class="info-panel">
                 <div class="info-item">
@@ -23,18 +35,6 @@
                 </div>
             </div>
         </header>
-        
-        <div class="difficulty-selector">
-            <select id="difficulty-select" class="difficulty-select">
-                <option value="easy">初級 (9×9, 地雷10)</option>
-                <option value="medium" selected>中級 (16×16, 地雷40)</option>
-                <option value="hard">上級 (16×30, 地雷99)</option>
-                <option value="hiddeneasy">裏初級 (9×9, 地雷20)</option>
-                <option value="hiddenmedium">裏中級 (16×16, 地雷64)</option>
-                <option value="hiddenhard">裏上級 (16×30, 地雷120)</option>
-                <option value="extreme">極悪 (64×64, 地雷999)</option>
-            </select>
-        </div>
 
         <div class="game-board-wrapper">
             <div class="game-board" id="game-board"></div>
@@ -48,6 +48,10 @@
             <div class="zoom-controls">
                 <button id="zoom-out-btn" class="zoom-btn">－</button>
                 <button id="zoom-in-btn" class="zoom-btn">＋</button>
+            </div>
+            <div class="font-size-controls">
+                <button id="font-size-down-btn" class="font-btn">文字小</button>
+                <button id="font-size-up-btn" class="font-btn">文字大</button>
             </div>
         </div>
 
