--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
                     <div class="settings-section">
                         <h3>テーマ</h3>
                         <button id="theme-toggle-btn" class="settings-toggle-btn">
-                            <span class="theme-icon">🌙</span>
-                            <span class="theme-text">ダークモード</span>
+                            <span class="theme-icon">☀️</span>
+                            <span class="theme-text">ライトモード</span>
                         </button>
                     </div>
                 </div>
