--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <div class="controls">
             <button id="flag-mode-btn" class="control-btn">
                 <span class="mode-icon">🚩</span>
+                <span class="mode-text">旗モード: OFF</span>
             </button>
             <div class="zoom-controls">
                 <button id="zoom-out-btn" class="zoom-btn">－</button>
