--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="info-panel">
                 <div class="info-item">
                     <span class="emoji">🚩</span>
-                    <span id="flag-count">0/40</span>
+                    <span id="flag-count">0/10</span>
                 </div>
                 <button id="reset-btn" class="reset-btn">😊</button>
                 <div class="info-item">
@@ -52,8 +52,8 @@
                     <div class="settings-section">
                         <h3>難易度</h3>
                         <select id="difficulty-select" class="difficulty-select-modal">
-                            <option value="easy">初級 (9×9, 地雷10)</option>
-                            <option value="medium" selected>中級 (16×16, 地雷40)</option>
+                            <option value="easy" selected>初級 (9×9, 地雷10)</option>
+                            <option value="medium">中級 (16×16, 地雷40)</option>
                             <option value="hard">上級 (16×30, 地雷99)</option>
                             <option value="hiddeneasy">裏初級 (9×9, 地雷20)</option>
                             <option value="hiddenmedium">裏中級 (16×16, 地雷64)</option>
