--- a/index.html
+++ b/index.html
@@ -12,9 +12,15 @@
     <div class="container">
         <header class="game-header">
             <div class="info-panel">
-                <div class="info-item">
-                    <span class="emoji">🚩</span>
-                    <span id="flag-count">0/10</span>
+                <div class="info-item-group">
+                    <div class="info-item">
+                        <span class="emoji">🚩</span>
+                        <span id="flag-count">0/10</span>
+                    </div>
+                    <div class="info-item">
+                        <span class="emoji">💣</span>
+                        <span id="mine-remaining">10</span>
+                    </div>
                 </div>
                 <button id="reset-btn" class="reset-btn">😊</button>
                 <div class="info-item">
