--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="flag-animation-container"></div>
     <div class="container">
         <header class="game-header">
             <div class="info-panel">
