--- a/index.html
+++ b/index.html
@@ -83,6 +83,13 @@
                             <span class="theme-text">ライトモード</span>
                         </button>
                     </div>
+                    <div class="settings-section">
+                        <h3>旗アニメーション</h3>
+                        <button id="flag-animation-toggle-btn" class="settings-toggle-btn">
+                            <span class="flag-animation-icon">🚩</span>
+                            <span class="flag-animation-text">ON</span>
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
