--- a/index.html
+++ b/index.html
@@ -90,6 +90,22 @@
                             <span class="flag-animation-text">ON</span>
                         </button>
                     </div>
+                    <div class="settings-section">
+                        <h3>グラデーション・影</h3>
+                        <button id="power-save-toggle-btn" class="settings-toggle-btn">
+                            <span class="power-save-icon">🎨</span>
+                            <span class="power-save-text">ON</span>
+                        </button>
+                        <p style="font-size: 12px; color: var(--text-secondary); margin-top: 10px;">OFFで消費電力を削減</p>
+                    </div>
+                    <div class="settings-section">
+                        <h3>トランジション効果</h3>
+                        <button id="reduced-motion-toggle-btn" class="settings-toggle-btn">
+                            <span class="reduced-motion-icon">✨</span>
+                            <span class="reduced-motion-text">ON</span>
+                        </button>
+                        <p style="font-size: 12px; color: var(--text-secondary); margin-top: 10px;">OFFで消費電力を削減</p>
+                    </div>
                 </div>
             </div>
         </div>
