--- a/index.html
+++ b/index.html
@@ -99,12 +99,12 @@
                         <p style="font-size: 12px; color: var(--text-secondary); margin-top: 10px;">OFFで消費電力を削減</p>
                     </div>
                     <div class="settings-section">
-                        <h3>トランジション効果</h3>
-                        <button id="reduced-motion-toggle-btn" class="settings-toggle-btn">
-                            <span class="reduced-motion-icon">✨</span>
-                            <span class="reduced-motion-text">ON</span>
+                        <h3>リバース操作</h3>
+                        <button id="reverse-toggle-btn" class="settings-toggle-btn">
+                            <span class="reverse-icon">🔄</span>
+                            <span class="reverse-text">OFF</span>
                         </button>
-                        <p style="font-size: 12px; color: var(--text-secondary); margin-top: 10px;">OFFで消費電力を削減</p>
+                        <p style="font-size: 12px; color: var(--text-secondary); margin-top: 10px;">スワイプ操作を反転します</p>
                     </div>
                 </div>
             </div>
