--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
             </button>
         </div>
 
+        <button id="help-btn" class="help-btn-floating">
+            <span class="help-icon">？</span>
+        </button>
 
         <div class="settings-modal" id="settings-modal">
             <div class="settings-modal-content">
@@ -105,6 +108,67 @@
                             <span class="reverse-text">OFF</span>
                         </button>
                         <p style="font-size: 12px; color: var(--text-secondary); margin-top: 10px;">スワイプ操作を反転します</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="help-modal" id="help-modal">
+            <div class="help-modal-content">
+                <div class="help-header">
+                    <h2>操作説明</h2>
+                    <button id="close-help" class="close-btn">✕</button>
+                </div>
+                <div class="help-body">
+                    <div class="help-section" id="mobile-help">
+                        <h3>📱 スマートフォン・タブレット</h3>
+                        <div class="help-item">
+                            <span class="help-action">タップ</span>
+                            <span class="help-description">マスを開く</span>
+                        </div>
+                        <div class="help-item">
+                            <span class="help-action">長押し</span>
+                            <span class="help-description">旗を立てる/外す</span>
+                        </div>
+                        <div class="help-item">
+                            <span class="help-action">🚩ボタン</span>
+                            <span class="help-description">旗モードの切り替え（ONの時はタップで旗）</span>
+                        </div>
+                        <div class="help-item">
+                            <span class="help-action">ピンチ</span>
+                            <span class="help-description">拡大・縮小</span>
+                        </div>
+                        <div class="help-item">
+                            <span class="help-action">スワイプ</span>
+                            <span class="help-description">ボードを移動（拡大時）</span>
+                        </div>
+                    </div>
+                    <div class="help-section" id="pc-help">
+                        <h3>💻 パソコン</h3>
+                        <div class="help-item">
+                            <span class="help-action">左クリック</span>
+                            <span class="help-description">マスを開く</span>
+                        </div>
+                        <div class="help-item">
+                            <span class="help-action">右クリック</span>
+                            <span class="help-description">旗を立てる/外す</span>
+                        </div>
+                        <div class="help-item">
+                            <span class="help-action">🚩ボタン</span>
+                            <span class="help-description">旗モードの切り替え（ONの時は左クリックで旗）</span>
+                        </div>
+                        <div class="help-item">
+                            <span class="help-action">＋/－ボタン</span>
+                            <span class="help-description">拡大・縮小</span>
+                        </div>
+                        <div class="help-item">
+                            <span class="help-action">中ボタンでドラッグ</span>
+                            <span class="help-description">ボードを移動（拡大時）</span>
+                        </div>
+                    </div>
+                    <div class="help-section">
+                        <h3>🎮 ゲームルール</h3>
+                        <p>地雷を避けながらすべての安全なマスを開くゲームです。数字は周囲8マスの地雷数を示します。</p>
                     </div>
                 </div>
             </div>
