--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                             <span class="help-description">旗モードの切り替え（ONの時はタップで旗）</span>
                         </div>
                         <div class="help-item">
-                            <span class="help-action">ピンチ</span>
+                            <span class="help-action">＋/－ボタン</span>
                             <span class="help-description">拡大・縮小</span>
                         </div>
                         <div class="help-item">
