クリア後メッセージ

--- a/index.html
+++ b/index.html
@@ -175,6 +175,21 @@
         </div>
     </div>
     
+    <!-- ゲームクリアモーダル -->
+    <div id="clear-modal" class="modal">
+        <div class="modal-content clear-modal-content">
+            <div class="clear-modal-header">
+                <span class="clear-icon">🎉</span>
+                <h2>クリア！</h2>
+            </div>
+            <p id="clear-message" class="clear-message"></p>
+            <div class="clear-modal-buttons">
+                <button id="next-difficulty-btn" class="clear-btn next-btn">次の難易度へ</button>
+                <button id="replay-difficulty-btn" class="clear-btn replay-btn">もう一度プレイ</button>
+            </div>
+        </div>
+    </div>
+    
     <script src="game.js"></script>
 </body>
 </html>
