--- a/products/pc/index.html
+++ b/products/pc/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
-    <title>マインスイーパー</title>
+    <title>マインスイーパー PC版</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -190,6 +190,7 @@
         </div>
     </div>
     
+    <script src="../../core/minesweeper-core.js"></script>
     <script src="game.js"></script>
 </body>
 </html>
