--- a/products/mobile/index.html
+++ b/products/mobile/index.html
@@ -8,7 +8,7 @@
     <title>マインスイーパー モバイル版</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body data-theme="dark">
     <div id="flag-animation-container"></div>
     <div class="container">
         <header class="game-header">
