--- a/products/pc-pro/index.html
+++ b/products/pc-pro/index.html
@@ -67,6 +67,9 @@
                 <button id="challenge-btn" class="control-btn pro-btn" title="チャレンジモード">
                     <span>🏆</span>
                 </button>
+                <button id="probability-btn" class="control-btn pro-btn" title="地雷確率表示">
+                    <span>🎲 確率</span>
+                </button>
             </div>
         </div>
 
@@ -251,6 +254,7 @@
     </div>
     
     <script src="../../core/minesweeper-core.js"></script>
+    <script src="modules/csp-solver.js"></script>
     <script src="game.js"></script>
 </body>
 </html>
