--- a/products/pc-pro/index.html
+++ b/products/pc-pro/index.html
@@ -70,6 +70,9 @@
                 <button id="probability-btn" class="control-btn pro-btn" title="地雷確率表示">
                     <span>🎲 確率</span>
                 </button>
+                <button id="assist-btn" class="control-btn pro-btn" title="補助モード">
+                    <span>🎯 補助</span>
+                </button>
             </div>
         </div>
 
