--- a/products/pc-pro/index.html
+++ b/products/pc-pro/index.html
@@ -21,7 +21,10 @@
                         <span id="mine-remaining">10</span>
                     </div>
                 </div>
-                <button id="reset-btn" class="reset-btn">😊</button>
+                <div class="center-group">
+                    <button id="reset-btn" class="reset-btn">😊</button>
+                    <div class="assist-display-container"></div>
+                </div>
                 <div class="info-item">
                     <span class="emoji">⏱️</span>
                     <span id="timer">000</span>
