--- a/products/pc-pro/index.html
+++ b/products/pc-pro/index.html
@@ -24,6 +24,7 @@
                 <div class="center-group">
                     <button id="reset-btn" class="reset-btn">😊</button>
                     <div class="assist-display-container"></div>
+                    <div class="global-stats-display-container"></div>
                 </div>
                 <div class="info-item">
                     <span class="emoji">⏱️</span>
