--- a/products/pc-pro/index.html
+++ b/products/pc-pro/index.html
@@ -23,12 +23,16 @@
                 </div>
                 <div class="center-group">
                     <button id="reset-btn" class="reset-btn">😊</button>
-                    <div class="assist-display-container"></div>
-                    <div class="global-stats-display-container"></div>
                 </div>
-                <div class="info-item">
-                    <span class="emoji">⏱️</span>
-                    <span id="timer">000</span>
+                <div class="timer-group">
+                    <div class="displays-container">
+                        <div class="assist-display-container"></div>
+                        <div class="global-stats-display-container"></div>
+                    </div>
+                    <div class="info-item">
+                        <span class="emoji">⏱️</span>
+                        <span id="timer">000</span>
+                    </div>
                 </div>
             </div>
         </header>
