アルファベットOFF機能追加

--- a/products/pc-pro/index.html
+++ b/products/pc-pro/index.html
@@ -152,6 +152,14 @@
                         <p style="font-size: 12px; color: var(--text-secondary); margin-top: 10px;">OFFで消費電力を削減</p>
                     </div>
                     <div class="settings-section">
+                        <h3>補助機能の色付け表示</h3>
+                        <button id="assist-visual-toggle-btn" class="settings-toggle-btn">
+                            <span class="assist-visual-icon">🎨</span>
+                            <span class="assist-visual-text">ON</span>
+                        </button>
+                        <p style="font-size: 12px; color: var(--text-secondary); margin-top: 10px;">OFFの時は補助機能のポップアップのみ使用</p>
+                    </div>
+                    <div class="settings-section">
                         <h3>リバース操作</h3>
                         <button id="reverse-toggle-btn" class="settings-toggle-btn">
                             <span class="reverse-icon">🔄</span>
