--- a/products/mobile-pro/index.html
+++ b/products/mobile-pro/index.html
@@ -15,17 +15,17 @@
             <div class="info-panel">
                 <div class="info-item-group">
                     <div class="info-item">
-                        <span class="emoji">💣</span>
-                        <span id="flag-count">0/10</span>
-                    </div>
-                    <div class="info-item">
-                        <span class="emoji">💣</span>
+                        <svg class="icon" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z"></path>
+                        </svg>
                         <span id="mine-remaining">10</span>
                     </div>
                 </div>
                 <button id="reset-btn" class="reset-btn">リスタート</button>
                 <div class="info-item">
-                    <span class="emoji">⏱️</span>
+                    <svg class="icon" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+                    </svg>
                     <span id="timer">000</span>
                 </div>
             </div>
@@ -37,26 +37,36 @@
         
         <div class="controls">
             <button id="flag-mode-btn" class="control-btn">
-                <span class="mode-icon">💣</span>
+                <svg class="icon" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 21v-4m0 0V5a2 2 0 012-2h6.5l1 1H21l-3 6 3 6h-8.5l-1-1H5a2 2 0 00-2 2zm9-13.5V9"></path>
+                </svg>
             </button>
             <div class="zoom-controls">
                 <button id="zoom-out-btn" class="zoom-btn">－</button>
                 <button id="zoom-in-btn" class="zoom-btn">＋</button>
             </div>
             <button id="settings-btn" class="control-btn">
-                <span class="settings-icon">⚙️</span>
+                <svg class="icon" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z"></path><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"></path>
+                </svg>
             </button>
         </div>
 
         <button id="help-btn" class="help-btn-floating">
-            <span class="help-icon">？</span>
+            <svg class="icon" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8.228 9c.549-1.165 2.03-2 3.772-2 2.21 0 4 1.343 4 3 0 1.4-1.278 2.575-3.006 2.907-.542.104-.994.54-.994 1.093m0 3h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+            </svg>
         </button>
 
         <div class="settings-modal" id="settings-modal">
             <div class="settings-modal-content">
                 <div class="settings-header">
                     <h2>設定</h2>
-                    <button id="close-settings" class="close-btn">✕</button>
+                    <button id="close-settings" class="close-btn">
+                        <svg class="icon" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+                        </svg>
+                    </button>
                 </div>
                 <div class="settings-body">
                     <div class="settings-section">
@@ -82,21 +92,28 @@
                     <div class="settings-section">
                         <h3>テーマ</h3>
                         <button id="theme-toggle-btn" class="settings-toggle-btn">
-                            <span class="theme-icon">☀️</span>
+                            <svg class="icon theme-icon" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z"></path>
+                            </svg>
                             <span class="theme-text">ライトモード</span>
                         </button>
                     </div>
                     <div class="settings-section">
                         <h3>旗アニメーション</h3>
                         <button id="flag-animation-toggle-btn" class="settings-toggle-btn">
-                            <span class="flag-animation-icon">💣</span>
+                            <svg class="icon flag-animation-icon" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 21v-4m0 0V5a2 2 0 012-2h6.5l1 1H21l-3 6 3 6h-8.5l-1-1H5a2 2 0 00-2 2zm9-13.5V9"></path>
+                            </svg>
                             <span class="flag-animation-text">ON</span>
                         </button>
                     </div>
                     <div class="settings-section">
                         <h3>グラデーション・影</h3>
                         <button id="power-save-toggle-btn" class="settings-toggle-btn">
-                            <span class="power-save-icon">🎨</span>
+                            <svg class="icon power-save-icon" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 21a4 4 0 01-4-4V5a2 2 0 012-2h4a2 2 0 012 2v12a4 4 0 01-4 4zM7 3H5a2 2 0 00-2 2v12a4 4 0 004 4h2a2 2 0 002-2V5a2 2 0 00-2-2z"></path>
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 9h2l-3 3h2"></path>
+                            </svg>
                             <span class="power-save-text">ON</span>
                         </button>
                         <p style="font-size: 12px; color: var(--text-secondary); margin-top: 10px;">OFFで消費電力を削減</p>
@@ -104,7 +121,9 @@
                     <div class="settings-section">
                         <h3>リバース操作</h3>
                         <button id="reverse-toggle-btn" class="settings-toggle-btn">
-                            <span class="reverse-icon">🔄</span>
+                            <svg class="icon reverse-icon" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15"></path>
+                            </svg>
                             <span class="reverse-text">OFF</span>
                         </button>
                         <p style="font-size: 12px; color: var(--text-secondary); margin-top: 10px;">スワイプ操作を反転します</p>
@@ -117,7 +136,11 @@
             <div class="help-modal-content">
                 <div class="help-header">
                     <h2>操作説明</h2>
-                    <button id="close-help" class="close-btn">✕</button>
+                    <button id="close-help" class="close-btn">
+                        <svg class="icon" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+                        </svg>
+                    </button>
                 </div>
                 <div class="help-body">
                     <div class="help-section" id="mobile-help">
@@ -131,7 +154,7 @@
                             <span class="help-description">旗を立てる/外す</span>
                         </div>
                         <div class="help-item">
-                            <span class="help-action">💣ボタン</span>
+                            <span class="help-action">フラグボタン</span>
                             <span class="help-description">旗モードの切り替え（ONの時はタップで旗）</span>
                         </div>
                         <div class="help-item">
@@ -154,7 +177,7 @@
                             <span class="help-description">旗を立てる/外す</span>
                         </div>
                         <div class="help-item">
-                            <span class="help-action">💣ボタン</span>
+                            <span class="help-action">フラグボタン</span>
                             <span class="help-description">旗モードの切り替え（ONの時は左クリックで旗）</span>
                         </div>
                         <div class="help-item">
@@ -179,7 +202,9 @@
     <div id="clear-modal" class="modal">
         <div class="modal-content clear-modal-content">
             <div class="clear-modal-header">
-                <span class="clear-icon">🎉</span>
+                <svg class="icon clear-icon" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4M7.835 4.697a3.42 3.42 0 001.946-.806 3.42 3.42 0 014.438 0 3.42 3.42 0 001.946.806 3.42 3.42 0 013.138 3.138 3.42 3.42 0 00.806 1.946 3.42 3.42 0 010 4.438 3.42 3.42 0 00-.806 1.946 3.42 3.42 0 01-3.138 3.138 3.42 3.42 0 00-1.946.806 3.42 3.42 0 01-4.438 0 3.42 3.42 0 00-1.946-.806 3.42 3.42 0 01-3.138-3.138 3.42 3.42 0 00-.806-1.946 3.42 3.42 0 010-4.438 3.42 3.42 0 00.806-1.946 3.42 3.42 0 013.138-3.138z"></path>
+                </svg>
                 <h2>クリア！</h2>
             </div>
             <p id="clear-message" class="clear-message"></p>
