--- a/products/mobile-pro/index.html
+++ b/products/mobile-pro/index.html
@@ -211,6 +211,8 @@
         </div>
     </div>
     
+    <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
+    <script>eruda.init();</script>
     <script src="../../core/minesweeper-core.js"></script>
     <script src="sound-manager.js"></script>
     <script src="game.js"></script>
