--- a/products/pc-pro/index.html
+++ b/products/pc-pro/index.html
@@ -272,6 +272,9 @@
     
     <script src="../../core/minesweeper-core.js"></script>
     <script src="../pc/game.js"></script>
+    <script src="modules/bit-minesweeper.js"></script>
+    <script src="modules/bit-csp-solver.js"></script>
+    <script src="modules/bit-csp-operations.js"></script>
     <script src="modules/csp-solver.js"></script>
     <script src="game.js"></script>
 </body>
