制約伝播ビット化

--- a/products/pc-pro/index.html
+++ b/products/pc-pro/index.html
@@ -273,9 +273,11 @@
     <script src="../../core/minesweeper-core.js"></script>
     <script src="../pc/game.js"></script>
     <script src="modules/bit-minesweeper.js"></script>
-    <script src="modules/bit-csp-solver.js"></script>
+    <script src="modules/simple-bit-csp.js"></script>
+    <!-- <script src="modules/bit-csp-solver.js"></script>
     <script src="modules/bit-csp-operations.js"></script>
-    <script src="modules/csp-solver.js"></script>
+    <script src="modules/bit-csp-probability.js"></script> -->
+    <!-- <script src="modules/csp-solver.js"></script> -->
     <script src="game.js"></script>
 </body>
 </html>
